clean-slate/src/snapshots/clean_slate__spanned_word__tests__block_comment.snap
---
source: clean-slate/src/spanned_word.rs
expression: "Comment::parse(\"; absolute magic\".into())"

---
Ok(
    (
        LocatedSpan {
            offset: 16,
            line: 1,
            fragment: "",
            extra: (),
        },
        Comment {
            kind: Block,
            comment: " absolute magic",
        },
    ),
)
