clean-slate/src/snapshots/clean_slate__spanned_word__tests__snapshot_motion.snap
---
source: clean-slate/src/spanned_word.rs
expression: "Motion::parse(\"G0\".into())"

---
Ok(
    (
        LocatedSpan {
            offset: 2,
            line: 1,
            fragment: "",
            extra: (),
        },
        Rapid,
    ),
)
