clean-slate/src/snapshots/clean_slate__spanned_word__tests__snapshot_non_modal.snap
---
source: clean-slate/src/spanned_word.rs
expression: "NonModal::parse(\"G4 P0.1\".into())"

---
Ok(
    (
        LocatedSpan {
            offset: 7,
            line: 1,
            fragment: "",
            extra: (),
        },
        Dwell {
            duration: 100ms,
        },
    ),
)
